fixed tile spacing

--- a/assets/_sass/_base.scss
+++ b/assets/_sass/_base.scss
@@ -15,24 +15,29 @@ $mono-font: 'Cutive Mono', monospace;
 //$name-color: $back-color;
 //$date-color: $shadow-color;
 
-$back-back-color: #567;
+
+
+
+$back-back-color: #fff;
 
 $head-back-color-1: #069;
-$head-back-color-2: #027;
+$head-back-color-2: #048;
+$head-back-color-3: #027;
 $head-text-color-1: #000;
 $head-text-color-2: #fff;
 
 $body-back-color: #fff;
 $body-back-accent: #ddf;
 $body-text-color: #000;
-$body-text-accent: #069;
+$body-text-accent: #048;
 
-$tile-back-color: #fff;
-$tile-back-accent: #ddd;
-$tile-text-color: #000;
-$tile-text-accent: #08a;
+$tile-back-color: #000;
+$tile-back-accent: #ff0;
+$tile-text-color: #fff;
+$tile-text-accent: #048;
 
 
+$half-thumb-gap: 5px;
 
 
 
