--- a/assets/_sass/_header.scss
+++ b/assets/_sass/_header.scss
@@ -2,7 +2,7 @@
 table.head {
 //    box-shadow: 0 0 1px 1px #000;
 //    background-color: $head-color;
-    background-image: radial-gradient($head-back-color-1, $head-back-color-2);
+    background-image: radial-gradient($head-back-color-1, $head-back-color-3);
 //    background-image: radial-gradient(#4A4949 15%, rgb(56, 56, 56) 35%);
     background-size: 3.5px 3.5px;
     position: fixed;
@@ -60,7 +60,7 @@ a.logo {
     display: inline-block;
     margin: 0;
     padding: 0;
-    color: $head-text-color-2;
-    &:visited { color: $head-text-color-2; }
-    &:hover { color: $head-text-color-1; }
+    color: $head-text-color-1;
+    &:visited { color: $head-text-color-1; }
+    &:hover { color: $head-text-color-2; }
 }
